vercel用の設定を追加

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,20 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/icons/icon-192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>SAHARA SABAKA</title>
+    <meta name="format-detection" content="telephone=no">
+    <meta name="robots" content="index,follow">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="SAHARA SABAKA">
+    <meta property="og:description" content="サハラマラソンへの挑戦 - 小さな挑戦が、大きな挑戦につながる。">
+    <meta property="og:url" content="https://saharasabaka.vercel.app">
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>
+      <div style="text-align: center; padding: 20px; font-family: sans-serif;">
+        <h1>JavaScript を有効にしてください</h1>
+        <p>このウェブサイトの全ての機能を利用するためには、ブラウザの設定でJavaScriptを有効にする必要があります。</p>
+      </div>
+    </noscript>
     <div id="root"></div>
   </body>
 </html>
