--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,18 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/icons/icon-192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>SAHARA SABAKA</title>
+    <title>サハラサバカ</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="robots" content="index,follow">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="SAHARA SABAKA">
+    <meta property="og:title" content="サハラサバカ">
     <meta property="og:description" content="サハラマラソンへの挑戦 - 小さな挑戦が、大きな挑戦につながる。">
     <meta property="og:url" content="https://saharasabaka.vercel.app">
+    <meta property="og:image" content="https://saharasabaka.vercel.app/images/sahara-hero.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="https://saharasabaka.vercel.app/images/sahara-hero.jpg">
   </head>
   <body>
     <noscript>
