--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="サハラマラソンへの挑戦 - 小さな挑戦が、大きな挑戦につながる。"
+      content="サハラマラソンへの挑戦"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/icons/icon-192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -16,13 +16,13 @@
     <meta name="robots" content="index,follow">
     <meta property="og:type" content="website">
     <meta property="og:title" content="サハラサバカ">
-    <meta property="og:description" content="サハラマラソンへの挑戦 - 小さな挑戦が、大きな挑戦につながる。">
+    <meta property="og:description" content="サハラマラソンへの挑戦">
     <meta property="og:url" content="https://saharasabaka.vercel.app">
-    <meta property="og:image" content="https://saharasabaka.vercel.app/images/sahara-hero.jpg">
+    <meta property="og:image" content="https://saharasabaka.vercel.app/images/og-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://saharasabaka.vercel.app/images/sahara-hero.jpg">
+    <meta name="twitter:image" content="https://saharasabaka.vercel.app/images/og-image.png">
   </head>
   <body>
     <noscript>
