--- a/public/index.html
+++ b/public/index.html
@@ -4,25 +4,36 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#F97316" />
     <meta
       name="description"
-      content="サハラマラソンへの挑戦"
+      content="サハラサバカ - サハラマラソンへの挑戦。過酷な砂漠を走り抜け、限界に挑む私たちの旅路をご覧ください。"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/icons/icon-192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>サハラサバカ</title>
+    <title>サハラサバカ | サハラマラソンへの挑戦</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="robots" content="index,follow">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="サハラサバカ">
-    <meta property="og:description" content="サハラマラソンへの挑戦">
+    <meta property="og:title" content="サハラサバカ | サハラマラソンへの挑戦">
+    <meta property="og:description" content="サハラサバカ - サハラマラソンへの挑戦。過酷な砂漠を走り抜け、限界に挑む私たちの旅路をご覧ください。">
     <meta property="og:url" content="https://saharasabaka.vercel.app">
     <meta property="og:image" content="https://saharasabaka.vercel.app/images/og-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="サハラサバカ | サハラマラソンへの挑戦">
+    <meta name="twitter:description" content="サハラサバカ - サハラマラソンへの挑戦。過酷な砂漠を走り抜け、限界に挑む私たちの旅路をご覧ください。">
     <meta name="twitter:image" content="https://saharasabaka.vercel.app/images/og-image.png">
+    <meta name="keywords" content="サハラマラソン, サハラサバカ, マラソン, ランニング, 砂漠, チャレンジ, スポーツ, 挑戦">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
+    <style>
+      body {
+        background-color: #FFF7ED;
+      }
+    </style>
   </head>
   <body>
     <noscript>
