--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,14 @@
         background-color: #FFF7ED;
       }
     </style>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=%REACT_APP_GA_ID%"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', '%REACT_APP_GA_ID%');
+    </script>
   </head>
   <body>
     <noscript>
