--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,13 @@
     <meta property="og:title" content="サハラサバカ | サハラマラソンへの挑戦">
     <meta property="og:description" content="サハラサバカ - サハラマラソンへの挑戦。過酷な砂漠を走り抜け、限界に挑む私たちの旅路をご覧ください。">
     <meta property="og:url" content="https://saharasabaka.vercel.app">
-    <meta property="og:image" content="https://saharasabaka.vercel.app/images/og-image.png">
+    <meta property="og:image" content="https://saharasabaka.vercel.app/images/og-image.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="サハラサバカ | サハラマラソンへの挑戦">
     <meta name="twitter:description" content="サハラサバカ - サハラマラソンへの挑戦。過酷な砂漠を走り抜け、限界に挑む私たちの旅路をご覧ください。">
-    <meta name="twitter:image" content="https://saharasabaka.vercel.app/images/og-image.png">
+    <meta name="twitter:image" content="https://saharasabaka.vercel.app/images/og-image.jpg">
     <meta name="keywords" content="サハラマラソン, サハラサバカ, マラソン, ランニング, 砂漠, チャレンジ, スポーツ, 挑戦">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
