meta情報の更新

--- a/public/index.html
+++ b/public/index.html
@@ -7,25 +7,25 @@
     <meta name="theme-color" content="#F97316" />
     <meta
       name="description"
-      content="サハラサバカ - サハラマラソンへの挑戦。過酷な砂漠を走り抜け、限界に挑む私たちの旅路をご覧ください。"
+      content="サハラサバカ - 2025年4月、1人のソフトウェアエンジニアが世界一過酷なマラソン大会「サハラマラソン」に挑戦。約250kmの砂漠を自給自足で走り抜ける究極の耐久レースへの挑戦記録。"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/icons/icon-192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>サハラサバカ | サハラマラソンへの挑戦</title>
+    <title>サハラサバカ | 2025年サハラマラソンへの挑戦</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="robots" content="index,follow">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="サハラサバカ | サハラマラソンへの挑戦">
-    <meta property="og:description" content="サハラサバカ - サハラマラソンへの挑戦。過酷な砂漠を走り抜け、限界に挑む私たちの旅路をご覧ください。">
+    <meta property="og:title" content="サハラサバカ | 2025年サハラマラソンへの挑戦">
+    <meta property="og:description" content="サハラサバカ - 2025年4月、世界一過酷なマラソン大会「サハラマラソン」に挑戦。約250kmの砂漠を自給自足で走り抜ける究極の耐久レースへの挑戦記録。">
     <meta property="og:url" content="https://saharasabaka.vercel.app">
     <meta property="og:image" content="https://saharasabaka.vercel.app/images/og-image.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="サハラサバカ | サハラマラソンへの挑戦">
-    <meta name="twitter:description" content="サハラサバカ - サハラマラソンへの挑戦。過酷な砂漠を走り抜け、限界に挑む私たちの旅路をご覧ください。">
+    <meta name="twitter:title" content="サハラサバカ | 2025年サハラマラソンへの挑戦">
+    <meta name="twitter:description" content="サハラサバカ - 2025年4月、世界一過酷なマラソン大会「サハラマラソン」に挑戦。約250kmの砂漠を自給自足で走り抜ける究極の耐久レースへの挑戦記録。">
     <meta name="twitter:image" content="https://saharasabaka.vercel.app/images/og-image.jpg">
-    <meta name="keywords" content="サハラマラソン, サハラサバカ, マラソン, ランニング, 砂漠, チャレンジ, スポーツ, 挑戦">
+    <meta name="keywords" content="サハラマラソン, サハラサバカ, マラソン, ランニング, 砂漠, チャレンジ, スポーツ, 挑戦, 2025年, モロッコ, ウルトラマラソン, 耐久レース, 自給自足">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
