完走結果に内容を修正

--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,15 @@
     <meta property="og:image" content="https://saharasabaka.vercel.app/images/og-image.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:site_name" content="サハラサバカ">
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@saharasabaka">
+    <meta name="twitter:creator" content="@saharasabaka">
     <meta name="twitter:title" content="サハラサバカ | 2025年サハラマラソンへの挑戦">
     <meta name="twitter:description" content="サハラサバカ - 2025年4月、世界一過酷なマラソン大会「サハラマラソン」に挑戦。約250kmの砂漠を自給自足で走り抜ける究極の耐久レースへの挑戦記録。">
     <meta name="twitter:image" content="https://saharasabaka.vercel.app/images/og-image.jpg">
+    <meta name="twitter:image:alt" content="サハラサバカ - サハラマラソンへの挑戦">
     <meta name="keywords" content="サハラマラソン, サハラサバカ, マラソン, ランニング, 砂漠, チャレンジ, スポーツ, 挑戦, 2025年, モロッコ, ウルトラマラソン, 耐久レース, 自給自足">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
